--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "method-override": "^2.3.5",
+    "serve-favicon": "~2.3.0",
+    "mongoose": "^4.1.11",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "bcryptjs": "^2.3.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
